--- a/package.json
+++ b/package.json
@@ -1,21 +1,48 @@
 {
   "name": "remotedeviewwindows",
   "version": "0.1.0",
+  "main": "public/main.js",
   "private": true,
+  "build": {
+    "extends": null,
+    "appId": "com.rdv.remotescraper",
+    "files": [
+      "dist/**/*",
+      "build/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
+  },
   "dependencies": {
+    "@electron/remote": "^1.2.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.0.0-beta3",
+    "concurrently": "^6.2.1",
+    "cross-env": "^7.0.3",
+    "electron-is-dev": "^2.0.0",
+    "express": "^4.17.1",
+    "mdb-react-ui-kit": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "wait-on": "^6.0.0",
+    "web-vitals": "^1.1.2",
+    "website-scraper": "^4.2.3",
+    "website-scraper-existing-directory": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron:serve": "concurrently -k \"cross-env BROWSER=none npm run start\" \"npm run electron:start\"",
+    "electron:build": "npm run build && electron-builder -c.extraMetadata.main=build/main.js",
+    "electron:start": "wait-on tcp:3000 && electron ."
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +61,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^13.1.9",
+    "electron-builder": "^22.11.7"
   }
 }
